# testing_devops

./: .gitignore  README.md  wss-unified-agent.config
copilot/: compose.override.yml  compose.prod.yml  compose.yml
copilot/api/: .gitignore
copilot/chatbot-ai-search-ingest/: Dockerfile.gc  Dockerfile.gi  Dockerfile.ps  README.md  payload_asset_manager.json
copilot/chatbot-dotnet-api/: .gitignore
copilot/chatbot-python-api/: .coveragerc  Dockerfile  Dockerfile.test  conftest.py  pytest.ini  requirements.txt  sonar-project.properties  tenacity.yaml  test_requirements.txt
copilot/content-generator/: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  conftest.py  pytest.ini  requirements.txt  team_workplan_Finance.json  team_workplan_HR.json  test_requirements.txt
copilot/content-generator/app/core/gpo_client/: README.md  auth.py  client.py  exceptions.py  http_client.py  pyproject.toml
copilot/content-generator/app/core/gpo_client/docs/: api_reference.md  architecture.md  authentication.md  configuration.md  direct_api_access.md  error_handling.md  examples.md  getting_started.md  integration.md  satknowledgeassistant-dev-ey-swagger.json  security.md  streaming.md  testing_guide.md  troubleshooting.md
copilot/content-generator/app/core/gpo_client/examples/: document_retrieval_example.py  retrieve_documents_for_query_example.py
copilot/content-generator/app/core/gpo_client/models/: chat.py  context.py  request.py  response.py  session.py
copilot/content-generator/app/core/gpo_client/tests/: test_client.py
copilot/kubernetes/: configMap.yaml  copilotPod.yaml
copilot/ui/: .dockerignore  .npmrc  Dockerfile  nginx.conf  package-lock.json  package.json  (+1 more)
docs/: pull_request_template.md
(+954 files in other folders)
